Corrected properties loading logic (From URL to File) Worked on fixing some inspection warnings